# newsletter

./: Cargo.toml  configuration.yaml  notes.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: general.yml  main.yml
migrations/: 20230528180725_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  test_health_check.rs
