[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[target.aarch64-apple-darwin]
rustflags = ["C", "link-arg=fuse-ld=/opt/homebrew/bin/zld"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.163", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "~0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
config = "0.13.3"
uuid = {version = "~1", features = ["v4"]}
chrono = "0.4.15"

[dev-dependencies] # not included in packaged binary
reqwest = "0.11"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[lib]
path = "src/lib.rs"
